# TransformerPolicy

./: .gitignore  README.md  pyproject.toml
models/lissajous_rnn/: config.yaml
models/lissajous_transformer/: config.yaml
models/robot_rnn/: config.yaml
models/robot_transformer/: config.yaml
src/: test.py  train.py
src/dataset/: __init__.py  lissajous.py  process_data.py  robot.py
src/model/: __init__.py  base.py  distributions.py  rnn.py  transformer.py
src/util/: __init__.py  tensorboard.py  visualize.py
