[tool.poetry]
name = "transformerpolicy"
version = "0.1.0"
description = ""
authors = ["nomutin <nomura0508@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^2.0.0"
matplotlib = "^3.7.1"
einops = "^0.6.0"
tensorboard = "^2.12.0"
pytorch-lightning = "^2.0.0"
hydra-core = "^1.3.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
isort = "^5.12.0"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
