[tool.poetry]
name = "transformerpolicy"
version = "0.1.0"
description = ""
authors = ["Nomura Yuta"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "*", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.6.1"
tensorboard = "^2.10.1"
einops = "^0.5.0"
hydra-core = "^1.2.0"
torch = "^2.0.0"
pytorch-lightning = "^2.0.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"
isort = "^5.10.1"
pyproject-flake8 = "^5.0.4.post1"
black = "^22.10.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
extend-ignore = "E203,"
max-complexity = 8
max-line-length = 79
exclude =["__pycache__",  ".venv", "robot_test.py"]

[tool.isort]
profile = "black"
line_length = 79

[tool.black]
line-length = 79

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    'ignore:distutils Version classes are deprecated.:DeprecationWarning',
]
addopts = "--ignore=src/robot_test.py"

[tool.mypy]
python_version = 3.8
# following setting is same as pysen
# https://github.com/pfnet/pysen/blob/main/setup.cfg#L12
check_untyped_defs = true
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
# TODO: turn these into true
disallow_untyped_calls = false
warn_return_any = false
